[gd_scene load_steps=14 format=3 uid="uid://brj0pxw043y7c"]

[ext_resource type="FontFile" uid="uid://c52roshcextrd" path="res://fonts/jbmono.ttf" id="1_21jpu"]
[ext_resource type="Script" uid="uid://ddrt78p8a5ym6" path="res://games/rps/screens/main/main.gd" id="1_rrh38"]
[ext_resource type="Script" uid="uid://b8aoyub3tolfp" path="res://games/rps/helpers/ai.gd" id="2_08fky"]
[ext_resource type="Script" uid="uid://12pc3pyitl5c" path="res://games/rps/helpers/gamemode.gd" id="3_ly3r3"]
[ext_resource type="StyleBox" uid="uid://cpmnlgdr5ouix" path="res://resources/buttons/default.tres" id="3_vkrnm"]
[ext_resource type="StyleBox" uid="uid://bljd2cphfb61d" path="res://resources/buttons/pressed.tres" id="4_g1e56"]
[ext_resource type="StyleBox" uid="uid://bae4da8nc584q" path="res://resources/buttons/hover.tres" id="5_a2agg"]
[ext_resource type="StyleBox" uid="uid://c7px3fhbbmpwa" path="res://resources/buttons/disabled.tres" id="6_hgfv1"]
[ext_resource type="StyleBox" uid="uid://mirppdjp070o" path="res://resources/buttons/focus.tres" id="7_w4fab"]

[sub_resource type="Theme" id="Theme_syy7l"]
default_font = ExtResource("1_21jpu")

[sub_resource type="Animation" id="Animation_21jpu"]
resource_name = "show_overlay"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("overlay/rounds_played:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1300, 15), Vector2(1158, 15)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("overlay/quit:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-256, 622.00006), Vector2(13, 622.00006)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("overlay/currently_playing:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-257, 299), Vector2(12, 299)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("overlay/streak:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-257, 17), Vector2(12, 17)]
}

[sub_resource type="Animation" id="Animation_vkrnm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("overlay/rounds_played:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1300, 15)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("overlay/quit:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-256, 622.00006)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("overlay/currently_playing:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-257, 299)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("overlay/streak:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-257, 17)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g1e56"]
_data = {
&"RESET": SubResource("Animation_vkrnm"),
&"show_overlay": SubResource("Animation_21jpu")
}

[node name="main" type="Control" node_paths=PackedStringArray("ai", "gamemode")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_syy7l")
script = ExtResource("1_rrh38")
ai = NodePath("ai")
gamemode = NodePath("gamemode")

[node name="overlay" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="streak" type="RichTextLabel" parent="overlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -257.0
offset_top = 17.0
offset_right = -1391.0012
offset_bottom = -622.7495
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.0093395)
theme_override_font_sizes/normal_font_size = 24
text = "[0] Streak
[0] Best"

[node name="currently_playing" type="RichTextLabel" parent="overlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -257.0
offset_top = 299.0
offset_right = -1245.0002
offset_bottom = -354.61993
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.0093395)
theme_override_colors/default_color = Color(1, 1, 1, 0.4745098)
theme_override_font_sizes/normal_font_size = 16
text = "Difficulty: easy
Gamemode: survival
Modifier: on edge"

[node name="rounds_played" type="RichTextLabel" parent="overlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1300.0
offset_top = 15.0
offset_right = 139.0
offset_bottom = -627.72174
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.0093395)
theme_override_font_sizes/normal_font_size = 24
text = "Round
[1/3]"
horizontal_alignment = 1

[node name="quit" type="Button" parent="overlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -896.0
offset_top = 262.00006
offset_right = -593.3683
offset_bottom = 358.00006
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.76, 0.8399988)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 38
theme_override_styles/normal = ExtResource("3_vkrnm")
theme_override_styles/pressed = ExtResource("4_g1e56")
theme_override_styles/hover = ExtResource("5_a2agg")
theme_override_styles/focus = ExtResource("7_w4fab")
text = "Quit Game"

[node name="moves" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -379.5
offset_top = 173.0
offset_right = 379.5
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2

[node name="rock" type="Button" parent="moves"]
layout_mode = 0
offset_right = 249.0
offset_bottom = 53.0
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_vkrnm")
theme_override_styles/pressed = ExtResource("4_g1e56")
theme_override_styles/hover = ExtResource("5_a2agg")
theme_override_styles/disabled = ExtResource("6_hgfv1")
theme_override_styles/focus = ExtResource("7_w4fab")
disabled = true
text = "[1] Rock"

[node name="paper" type="Button" parent="moves"]
layout_mode = 0
offset_left = 255.0
offset_right = 504.0
offset_bottom = 53.0
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_vkrnm")
theme_override_styles/pressed = ExtResource("4_g1e56")
theme_override_styles/hover = ExtResource("5_a2agg")
theme_override_styles/disabled = ExtResource("6_hgfv1")
theme_override_styles/focus = ExtResource("7_w4fab")
disabled = true
text = "[2] Paper"

[node name="scissors" type="Button" parent="moves"]
layout_mode = 0
offset_left = 508.0
offset_right = 757.0
offset_bottom = 53.0
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_vkrnm")
theme_override_styles/pressed = ExtResource("4_g1e56")
theme_override_styles/hover = ExtResource("5_a2agg")
theme_override_styles/disabled = ExtResource("6_hgfv1")
theme_override_styles/focus = ExtResource("7_w4fab")
disabled = true
text = "[3] Scissors"

[node name="continue" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 351.99994
offset_top = 262.0
offset_right = 710.0
offset_bottom = 358.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.76, 0.8399988)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = ExtResource("3_vkrnm")
theme_override_styles/pressed = ExtResource("4_g1e56")
theme_override_styles/hover = ExtResource("5_a2agg")
theme_override_styles/focus = ExtResource("7_w4fab")
text = "Next Round"

[node name="time_left" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 90.000015
offset_right = -2.0
offset_bottom = -538.85126
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.0093395)
theme_override_font_sizes/normal_font_size = 32
text = "Time Left: 5.0"
horizontal_alignment = 1

[node name="score_count" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 22.0
offset_right = -2.0
offset_bottom = -625.6755
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.0093395)
theme_override_font_sizes/normal_font_size = 42
text = "You [0]  |  AI [0]"
horizontal_alignment = 1

[node name="ai_move" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 188.0
offset_right = 2.0
offset_bottom = -455.71246
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.0093395)
theme_override_font_sizes/normal_font_size = 45
bbcode_enabled = true
text = "Rock, Paper or Scissors?"
horizontal_alignment = 1

[node name="round_end" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 251.0
offset_right = 2.0
offset_bottom = -392.71246
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.0093395)
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
text = "you won! paper beats cheese"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ai" type="Node" parent="."]
script = ExtResource("2_08fky")
test_mode = true

[node name="gamemode" type="Node" parent="."]
script = ExtResource("3_ly3r3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_g1e56")
}

[connection signal="pressed" from="overlay/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]
